fixed issue with nav spacing & touch area

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -3,12 +3,13 @@
 #footer {
   display: flex;
   position: relative;
+  align-items: center;
   justify-content: space-between;
   margin-top: $spacing * 1.5;
   margin-bottom: $padding / 4;
   font-size: 0.85em;
-  
-    @media all and (min-width: $screen-md) {
-      font-size: 0.8em;
-    }
+
+  @media all and (min-width: $screen-md) {
+    font-size: 0.8em;
+  }
 }
