--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -4,40 +4,44 @@
     align-items: center;
     margin: 0;
     padding: 0;
-    
+
     li {
       display: inline-block;
       padding: 0;
       list-style: none;
-      
-      +li,
-      +ul {
-        @media all and (min-width: $screen-sm) {
-          padding-left: 1em;
-        }
+
+      + li,
+      + ul {
+        padding-left: 1em;
       }
     }
-    
+
     a {
       @media all and (max-width: $screen-md) {
         display: inline-flex;
         align-items: center;
-        width: 48px;
+        justify-content: center;
         height: 48px;
       }
     }
   }
-  
+
   button {
     background: none;
     border: none;
     padding: 0;
     cursor: pointer;
     font-size: 1.2em;
-    
-    +button {
+
+    @media all and (max-width: $screen-md) {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      height: 48px;
+    }
+
+    + button {
       padding-left: 0.5em;
     }
-    
   }
 }
